--- a/style.css
+++ b/style.css
@@ -1,1 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+.newspaper-container {
+    width: 700px;
+    background: white;
+    box-shadow: 5px 5px #ddd;
+    border-radius: 20px 20px;
+    margin: auto;
+}
+
+.date {
+    font-family: Source Sans Pro;
+    padding: 0.5em 0 0 1em;
+}
+
+body {
+    background-color: #eee;
+}
+
+h1 {
+    font-family: Abril Fatface;
+    text-align: center;
+}
+
+nav ul {
+    border-top: solid 3px #eee;
+    border-bottom: solid 3px #eee;
+    margin-left: 3vh;
+    margin-right: 3vh;
+}
+
+nav li {
+    list-style: none;
+    font-family: Source Sans Pro;
+    display: inline-block;
+    margin: auto;
+    padding: 0 0.05em 0;
+}
+
+nav a {
+    text-decoration: none;
+    color: #777;
+}
+
+h2 {
+    font-family: Roboto Slab;
+    margin-bottom: 0;
+    margin-left: 5vh;
+}
+
+h5 {
+    color: #dd3232;
+    margin-top: 0.5em;
+    font-family: Roboto Slab;
+    margin-left: 5vh;
+}
+
+main p, main img {
+    margin: 0 5vh;
+}
+
+main p, section p{
+    font-family: Source Sans Pro;    
+}
+
+main p {
+    margin-bottom: 1em;
+}
+
+.more-articles {
+    border-top: solid 3px #eee;
+    margin-left: 2vh;
+    margin-right: 2vh;
+}
+
+.more-articles section {
+    display: inline-block;
+    width: 44%;
+    padding: 1em;
+}
+
+h4 {
+    font-family: Roboto Slab;
+}
